# ai-career-copilot

./: README.md  pyproject.toml
api/: main.py
data/: data_card.md  data_sources.md
docs/: 01_business_requirements.md  02_feasibility_study.md  03_methodology.md  04_evaluation.md  05_research_paper.md
mlops/: mlflow_config.yaml  model_card.md
notebooks/: 01_eda.ipynb  01_eda.md  02_features.ipynb  02_features.md  03_model.ipynb  03_model.md  04_eval.ipynb  04_eval.md
src/career_copilot/: __init__.py  data.py  features.py  models.py  serve.py
tests/: test_smoke.py
ui/: package.json
ui/app/: layout.tsx  page.tsx
